Make use of import static org.junit.Assert methods (requires Java 5)